<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="search_hint">在%1$s中搜索</string>
    <string name="search_writing">作品夹</string>
    <string name="search_writing_hint">搜索作品夹</string>
    <string name="search_former_hint">搜索格律</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="delete_title">确认删除</string>
    <string name="delete_content">确定删除这篇作品？</string>
    <string name="save_title">确定保存</string>
    <string name="save_content">确定保存此次修改？</string>
    <string name="save">保存</string>
    <string name="give_up">放弃</string>
    <string name="delete_former_content">确定删除此格律？</string>
    <string name="copy_text_done">文本已复制到剪切板</string>
    <string name="setting_yun">韵典</string>
    <string name="setting_typeface">字体切换</string>

    <string name="input_shanglian">请输入上句</string>
    <string name="tts_unable">抱歉，您的手机暂不支持系统语音朗读</string>
    <string name="tip_paste_auto">是否自动保存中文分句符后的内容到下一行</string>
    <string name="auto_save">智能保存</string>

    <string name="search_collect">收藏夹</string>
    <string name="search_collect_hint">搜索收藏夹</string>

    <!-- setting-->
    <string name="setting_username">作者名</string>
    <string name="username_input">请输入作者名</string>
    <string name="weibo_title">关注微博</string>
    <string name="input_title">输入标题</string>
    <string name="setting_congratuate_us">给我打分</string>
    <string name="setting_former">格律编辑</string>
    <string name="setting_check">检查平仄</string>
    <string name="check_true">自动检查</string>
    <string name="check_false">不自动检查</string>

    <!--格律编辑-->
    <string name="former_name">格律名</string>
    <string name="former_intro">格律介绍</string>
    <string name="former_pingze">平仄</string>
    <string name="former_add_value_null">格律名和平仄不能为空</string>
    <string name="former_save">格律已保存</string>
    <string name="former_add">格律已添加</string>
    <string name="manual">自定义</string>
    <string name="no_limit">不限</string>

    <!--数据迁移-->
    <string name="backup_title">数据迁移</string>
    <string name="backup_text">说明：\n此功能用于非社区创建的诗词作品数据的迁移，更换手机时把旧手机的作品迁移到新手机上</string>
    <string name="backup_step">迁移步骤：\n1.到旧手机目录%1$s下找到%2$s文件，复制到新手机对应目录，如果没有对应目录就手动创建，如果新手机已有同名文件请替换\n2.如果新手机的应用已经启动过请清除应用数据或者卸载后再安装，没有启动过请跳过此步骤\n3.在系统应用管理页面打开本应用读取存储权限\n4.打开应用数据即可自动更新了</string>

    <!--about-->
    <string name="version_text">当前版本：V%s</string>
    <string name="about_text_weixin">微信公众号：天涯共词Ci</string>
    <string name="about_wexin">天涯共词Ci</string>
    <string name="about_text_email">有建议或者bug请联系：\nandymao1991@gmail.com</string>
    <string name="about_email">andymao1991@gmail.com</string>
    <string name="about_email_toast">邮箱号已复制到剪切板，我们会查看并考虑您的每一个建议</string>
    <string name="about_qq_toast">QQ群号已复制到剪切板，请打开QQ查找QQ群加入我们</string>
    <string name="about_wexin_toast">微信公众号已复制到剪切板，请打开微信查找公众号找到我们并关注</string>

    <string name="community_name">社区</string>
    <string name="former_delete">格律已删除</string>
    <string name="copy_text">复制文本</string>
    <string name="writing_empty">您当前还没有作品哦，请点击左下角加号选择格律创作</string>
    <string name="community_text">我们开通了知识星球做为我们的新社区。\n在微信扫描二维码，即可进入,点击图片可以保存到相册。</string>

    <string name="privacy_exit">退出</string>
    <string name="privacy_agree">同意</string>
    <string name="users_note">用户须知</string>
    <string name="privacy_tips_key1">《用户协议》</string>
    <string name="privacy_tips_key2">《隐私政策》</string>
    <string name="privacy_tips">为了保护您的隐私和使用安全，请您务必仔细阅读我们的《用户协议》和《隐私政策》。在确认充分理解并同意后再开始使用此应用。感谢！</string>
    <string name="confirmed">用户须知已确认</string>
    <string name="opt_terms">用户协议</string>
    <string name="opt_privacy">隐私政策</string>

</resources>