<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragment_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.myth.poetrycommon.view.TypefaceTextView
        android:id="@+id/backup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/backup_title"
        android:textColor="@color/white_hint"
        android:textSize="26sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <com.myth.poetrycommon.view.TypefaceTextView
                android:id="@+id/backup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="start"
                android:text="@string/backup_text"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <com.myth.poetrycommon.view.TypefaceTextView
                android:id="@+id/backup_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="start"
                android:text="@string/backup_step"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>