<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/back1"
              android:orientation="vertical"
              android:padding="35dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/former_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:cursorVisible="true"
        android:drawablePadding="5dip"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/former_intro"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/et_intro"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:cursorVisible="true"
        android:drawablePadding="5dip"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/former_pingze"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_pingze"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:cursorVisible="true"
        android:drawablePadding="5dip"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/usercenter_blue_btn"
        android:gravity="center"
        android:text="保存"
        android:textColor="@color/white"
        android:textSize="12sp"/>

</LinearLayout>