<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/setting_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/item_yun"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/yun_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/setting_yun"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/yun_value"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:text="@string/setting_yun"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_typeface"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/typeface_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/setting_typeface"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/typeface_value"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:text="@string/setting_yun"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_check"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/check_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/setting_check"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/check_value"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_username"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/setting_username"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/username_value"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:hint="点击输入"
                    android:textColor="@color/selector_white_to_grey"
                    android:textColorHint="@color/black_hint"
                    android:textSize="16sp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/item_about"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/about_value"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_congratuate_us"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/congratuate_us_title"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/setting_congratuate_us"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/next_hl"
                    android:gravity="center"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_weibo"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/weibo_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:drawableRight="@drawable/next_hl"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/weibo_title"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_user_policy"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/user_policy_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:drawableRight="@drawable/next_hl"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/opt_terms"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"
                    android:singleLine="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_line"/>

            <RelativeLayout
                android:id="@+id/item_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/privacy_policy_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:drawableRight="@drawable/next_hl"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/opt_privacy"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"
                    android:singleLine="true" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/setting_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/item_backup"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/backup_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:drawableRight="@drawable/next_hl"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/backup_title"
                    android:textColor="@color/selector_white_to_grey"
                    android:textSize="16sp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>